Name: hatex-guide
Version: 1.2.0.0
Author: Daniel Díaz
Build-type: Custom
Category: LaTeX
License: BSD3
License-file: license
Maintainer: Daniel Díaz (dhelta `dot` diaz `at` gmail `dot` com)
Bug-reports: https://github.com/Daniel-Diaz/hatex-guide/issues
Synopsis: HaTeX User's Guide.
Description: The HaTeX User's Guide is a manual explaining the
  HaTeX library (<http://hackage.haskell.org/package/HaTeX>).
  This library can be used to output the guide in different formats.
  A compiled pdf version of the latex output can be found at
  <http://daniel-diaz.github.com/projects/hatex/hatex-guide.pdf>.
  See the README file (<https://github.com/Daniel-Diaz/hatex-guide/blob/master/README.md>)
  for more details.
Cabal-version: >= 1.6
Extra-source-files:
  -- README file
  README.md
  -- Source of the guide
  src/*.htxg
  -- Other resources (like images)
  res/machine.png

Source-repository head
  type: git
  location: git@github.com:Daniel-Diaz/hatex-guide.git

Library
  Build-depends: base == 4.*
               , HaTeX >= 3.7.0.0 && < 3.8.0.0
               , text == 0.11.*
               , filepath
               , parsec >= 3.1.2 && < 3.2
               , directory
               , blaze-html
               , transformers
  Exposed-modules:
    Text.LaTeX.Guide
  Other-modules:
    Text.LaTeX.Guide.Auto
    Text.LaTeX.Guide.Syntax
    Text.LaTeX.Guide.Info
    Text.LaTeX.Guide.Update
    Text.LaTeX.Guide.Backend.LaTeX
    Text.LaTeX.Guide.Backend.Wiki
    Text.LaTeX.Guide.Backend.HTML
